--- a/roommanage/config/config.json
+++ b/roommanage/config/config.json
@@ -27,14 +27,14 @@
         "servers":[
             {
                 "id":"1",
-                "host":"127.0.0.1",
+                "host":"192.169.3.4",
                 "port":3000,
                 "room":500
             }
         ],
-        "debug":true,
-        "userRoomTime":600,
-        "agentRoomTime":3600,
+        "debug":false,
+        "userRoomTime":300,
+        "agentRoomTime":300,
         "maxRoomTime":86400,
         "expiredTime":60
     }
